Add updated stylesheets and HTML file

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
       </div>
       <section class="profile__info">
         <article class="basic-info">
-          <strong class="basic-info__name">Victor Crest</strong>
-          <span class="basic-info__age">26</span>
+          <div class="basic-info--flex">
+            <h1 class="basic-info__name">Victor Crest</h1>
+            <span class="basic-info__age">26</span>
+          </div>
           <span class="basic-info__location">London</span>
         </article>
         <article class="stats">
